Fix dark mode

--- a/assets/sass/components/admin-panel.scss
+++ b/assets/sass/components/admin-panel.scss
@@ -6,9 +6,17 @@
   display: block;
   padding: var(--padding-y) var(--padding-x);
   box-shadow: 0px 6px 12px rgba(0,0,0,0.11);
-  background-color: white;
+  background-color: var(--colour-white);
   border-radius: rem(8);
   margin-bottom: rem(24);
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: var(--colour-white);
+
+  
+    @include reset-colours();
+    color: var(--colour-body);
+  }  
 
   &.bg-secondary{
 
